examples/pass/errorArray2.c


int main(){
    int x[3];
    print("No deberia poder acceder a esta posicion, errorArray2: %i", x[3]);
    return 0;
}