examples/error/errorArray3.c
int main(){
    int x[3][4];
    x[0] = 0;
    printf("No deberia poder acceder a esta posicion, errorArray3: %i", x[0]);
    return 0;
}
